--- a/checkpoint2.ipynb
+++ b/checkpoint2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -53,21 +53,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j5/hmf3vlrs4070kqhwlvzn96mr0000gn/T/ipykernel_30606/1132553403.py:71: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/j5/hmf3vlrs4070kqhwlvzn96mr0000gn/T/ipykernel_531/4085776183.py:70: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df[col].fillna(df[col].median(), inplace=True)\n",
-      "/var/folders/j5/hmf3vlrs4070kqhwlvzn96mr0000gn/T/ipykernel_30606/1132553403.py:71: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/j5/hmf3vlrs4070kqhwlvzn96mr0000gn/T/ipykernel_531/4085776183.py:70: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df[col].fillna(df[col].median(), inplace=True)\n",
-      "/var/folders/j5/hmf3vlrs4070kqhwlvzn96mr0000gn/T/ipykernel_30606/1132553403.py:71: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/j5/hmf3vlrs4070kqhwlvzn96mr0000gn/T/ipykernel_531/4085776183.py:70: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -232,7 +232,6 @@
     "import seaborn as sns\n",
     "from scipy import stats\n",
     "\n",
-    "# For better plots inline\n",
     "%matplotlib inline\n",
     "\n",
     "# Load the dataset (assuming the CSV file is in the same folder)\n",
@@ -301,7 +300,6 @@
     "        df[col].fillna(\"MissingVal\", inplace=True)\n",
     "\n",
     "# 9. Example of removing outliers in a numeric column (optional)\n",
-    "#    Using a 3-sigma or IQR-based approach; here we demonstrate simple IQR for 'SalePrice' if it exists.\n",
     "if \"SalePrice\" in df.columns:\n",
     "    Q1 = df[\"SalePrice\"].quantile(0.25)\n",
     "    Q3 = df[\"SalePrice\"].quantile(0.75)\n",
@@ -319,25 +317,13 @@
     "print(df.dtypes.value_counts())\n",
     "\n",
     "#  ================================================\n",
-    "#  ***** SECTION 3: BASIC DATA EXPLORATION ********\n",
-    "#  (20 points) - Summary Stats, 3 conclusions \n",
+    "#  ***** SECTION 3: Summary Stats, 3 conclusions \n",
     "#  ================================================\n",
-    "#\n",
-    "#  We need at least 3 different statistical methods \n",
-    "#  + 1+ plot per method \n",
-    "#\n",
-    "#  We'll do:\n",
-    "#    Method 1: Correlation analysis (corr + heatmap)\n",
-    "#    Method 2: A t-test example for a chosen feature\n",
-    "#    Method 3: Another hypothesis test or descriptive analysis\n",
-    "#  \n",
-    "#  Each method -> present a conclusion\n",
-    "#  + at least one plot per method\n",
     "\n",
     "# -------------- METHOD 1: CORRELATION ANALYSIS --------------\n",
     "\n",
-    "# We'll pick a small subset of numeric columns for easier viewing\n",
-    "# Example set: LotArea, OverallQual, YearBuilt, GrLivArea, SalePrice\n",
+    "# We picked a small subset of numeric columns for easier viewing\n",
+    "# Set: LotArea, OverallQual, YearBuilt, GrLivArea, SalePrice\n",
     "columns_of_interest = []\n",
     "for possible in ['LotArea','OverallQual','YearBuilt','GrLivArea','SalePrice']:\n",
     "    if possible in df.columns:\n",
@@ -358,10 +344,15 @@
     "plt.title(\"Correlation Heatmap (Sample Numeric Features)\")\n",
     "plt.show()\n",
     "\n",
-    "# Conclusion from correlation:\n",
-    "#   For instance, if 'SalePrice' is in columns_of_interest, we might see a strong positive correlation\n",
-    "#   with 'OverallQual' or 'GrLivArea'. That suggests these features might be influential\n",
-    "#   in predicting home prices.\n",
+    "# Conclusion:\n",
+    "# From the heatmap, the strongest positive correlations with SalePrice appear to be:\n",
+    "\n",
+    "# OverallQual (0.78): A higher-quality overall finish and materials is strongly associated with higher sale prices. This aligns with intuition that better‐built homes lead to higher market values.\n",
+    "# GrLivArea (0.66): The amount of above‐ground living area (square footage) also shows a strong positive correlation with sale price—bigger houses tend to sell for more.\n",
+    "# YearBuilt (0.56): Newer homes generally carry higher value, which is reflected in a moderate positive correlation between construction year and sale price.\n",
+    "# LotArea (0.25): This smaller positive correlation indicates that while more land can add to the home's overall value, it is not as strong a predictor as quality, living area, or year built.\n",
+    "\n",
+    "# Overall, OverallQual and GrLivArea emerge as potentially the most influential features to explain or predict home prices in this subset.\n",
     "\n",
     "\n",
     "# -------------- METHOD 2: T-TEST ON A CATEGORICAL GROUP --------------\n",
@@ -400,8 +391,9 @@
     "    plt.show()\n",
     "\n",
     "# Conclusion from T-test:\n",
-    "#   If the p-value < 0.05, there's a statistically significant difference\n",
-    "#   in average sale price between RL and RM zones (for instance).\n",
+    "# Given the T-statistic of 17.520 and a p-value < 0.00001, there is a statistically significant difference in average sale prices between homes in the RL (Residential Low Density) zone and those in the RM (Residential Medium Density) zone. \n",
+    "#Specifically, the mean sale price for RL properties ($178,501.30) is  higher than for RM properties ($123,470.23). \n",
+    "# These results strongly suggest that zoning classification (RL vs. RM) is associated with notable differences in sale price.\n",
     "\n",
     "\n",
     "# -------------- METHOD 3: AN EXAMPLE HYPOTHESIS TEST - YEARBUILT --------------\n",
@@ -426,8 +418,9 @@
     "    plt.show()\n",
     "\n",
     "# Conclusion:\n",
-    "#   This test might reveal if there's a significantly larger or smaller living area in older vs. newer homes.\n",
-    "#   The p-value indicates whether that difference is statistically significant.\n",
+    "#The p-value (0.0508) is slightly above the conventional 0.05 threshold, indicating the difference in average living area between houses built before 1950 (Mean = 1424 sq. ft.) and \n",
+    "# those built after 1950 (Mean = 1489 sq. ft.) is only marginally significant (if at all) at the 5% confidence level. \n",
+    "# Practically speaking, newer homes appear to have a somewhat larger average living area, but statistically, the difference is right on the edge of the usual significance cutoff.\n",
     "\n",
     "#  ================================================\n",
     "#  ***** FINAL OUTPUT FOR CHECKPOINT 2 ************\n",
