added intro para

--- a/CMSC320_Final_Project.ipynb
+++ b/CMSC320_Final_Project.ipynb
@@ -13,20 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill in a short narrative (~150 words) answering:\n",
-    "\n",
-    "What is the problem?  (accurate pricing of houses)\n",
-    "\n",
-    "Why is it important?  (stakeholders, money, affordability)\n",
-    "\n",
-    "Key questions.  (e.g., “Which features drive price most, and how well can we predict?”)\n",
-    "\n",
-    "(Write this after we finish the analysis so you can cite actual findings; for now leave a TODO placeholder.)"
+    "### Introduction \n",
+    "Accurate housing price prediction represents a significant challenge in real estate analytics, with broad implications for both market participants and the economy at large. This project addresses the fundamental problem of determining which factors most significantly influence residential property values and developing predictive models that can accurately estimate sale prices based on these factors. Housing is the largest investment for most Americans, making precise valuations important for informed decision-making by buyers, sellers, lenders, and investors. Inaccurate pricing can lead to substantial financial losses, market inefficiencies, and barriers to affordability.\n",
+    "The importance of this analysis extends beyond individual transactions to impact housing policy, mortgage lending practices, and urban development strategies. By identifying key price determinants, stakeholders can make data-driven decisions that optimize value while promoting sustainable communities. Our investigation centers on several essential questions: Which property features and neighborhood characteristics most strongly correlate with sale prices? How effectively can machine learning models predict house prices using these features? What insights can be derived about housing market dynamics from statistical modeling? Through comprehensive analysis of the Ames, Iowa housing dataset, we aim to develop predictive models while providing insights for real estate stakeholders."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1275,123 +1269,10 @@
       "  MAE : 0.2956\n",
       "  R²  : -0.0090\n",
       "Evaluating Decision Tree...\n",
-      "  RMSE: 0.1921\n",
-      "  MAE : 0.1368\n",
-      "  R²  : 0.7268\n",
-      "Evaluating Random Forest...\n",
-      "  RMSE: 0.1334\n",
-      "  MAE : 0.0925\n",
-      "  R²  : 0.8699\n",
-      "Evaluating Gradient Boosting...\n",
-      "  RMSE: 0.1232\n",
-      "  MAE : 0.0846\n",
-      "  R²  : 0.8906\n",
-      "Evaluating XGBoost...\n",
-      "  RMSE: 0.1325\n",
-      "  MAE : 0.0929\n",
-      "  R²  : 0.8719\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RMSE</th>\n",
-       "      <th>MAE</th>\n",
-       "      <th>R2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Ridge Regression</th>\n",
-       "      <td>1.175545e-01</td>\n",
-       "      <td>8.208409e-02</td>\n",
-       "      <td>8.991861e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gradient Boosting</th>\n",
-       "      <td>1.231789e-01</td>\n",
-       "      <td>8.455887e-02</td>\n",
-       "      <td>8.906116e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>XGBoost</th>\n",
-       "      <td>1.325265e-01</td>\n",
-       "      <td>9.285965e-02</td>\n",
-       "      <td>8.718734e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Random Forest</th>\n",
-       "      <td>1.333820e-01</td>\n",
-       "      <td>9.249278e-02</td>\n",
-       "      <td>8.698716e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Decision Tree</th>\n",
-       "      <td>1.920884e-01</td>\n",
-       "      <td>1.368338e-01</td>\n",
-       "      <td>7.267888e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lasso Regression</th>\n",
-       "      <td>3.720262e-01</td>\n",
-       "      <td>2.955690e-01</td>\n",
-       "      <td>-8.977125e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Elastic Net</th>\n",
-       "      <td>3.720262e-01</td>\n",
-       "      <td>2.955690e-01</td>\n",
-       "      <td>-8.977125e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Linear Regression</th>\n",
-       "      <td>9.097424e+08</td>\n",
-       "      <td>9.415200e+07</td>\n",
-       "      <td>-7.400164e+18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           RMSE           MAE            R2\n",
-       "Ridge Regression   1.175545e-01  8.208409e-02  8.991861e-01\n",
-       "Gradient Boosting  1.231789e-01  8.455887e-02  8.906116e-01\n",
-       "XGBoost            1.325265e-01  9.285965e-02  8.718734e-01\n",
-       "Random Forest      1.333820e-01  9.249278e-02  8.698716e-01\n",
-       "Decision Tree      1.920884e-01  1.368338e-01  7.267888e-01\n",
-       "Lasso Regression   3.720262e-01  2.955690e-01 -8.977125e-03\n",
-       "Elastic Net        3.720262e-01  2.955690e-01 -8.977125e-03\n",
-       "Linear Regression  9.097424e+08  9.415200e+07 -7.400164e+18"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Best model based on RMSE: Ridge Regression\n"
+      "  RMSE: 0.1917\n",
+      "  MAE : 0.1405\n",
+      "  R²  : 0.7185\n",
+      "Evaluating Random Forest...\n"
      ]
     }
    ],
@@ -1447,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
