added intro section

--- a/CMSC320_Final_Project.ipynb
+++ b/CMSC320_Final_Project.ipynb
@@ -4,9 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🏠 Predicting House Prices in Ames, Iowa  \n",
-    "### CMSC 320 · Final Project (Checkpoint 3)  \n",
-    "**Authors:** Santosh Sureshkumar, Aarnav Tare and Joshua Vallabhaneni   **GitHub:**  https://github.com/toshsuresh/CMSC320FinalProj"
+    "# 🏠 Predicting House Prices in Ames, Iowa  \n",
+    "**CMSC 320 · Spring 2025 Final Project Tutorial**\n",
+    "\n",
+    "### Contributions  \n",
+    "| Member | Sections | 1–2 sentence summary |\n",
+    "|--------|----------|----------------------|\n",
+    "| Santosh Sureshkumar | A, B, C | Proposed initial idea; handled raw data ingestion & cleaning. |\n",
+    "| Aarnav Tare          | D, E    | Designed ML workflow; performed model selection & tuning. |\n",
+    "| Joshua Vallabhaneni  | F, G    | Led EDA visualizations, result interpretation, and wrote final tutorial. |\n"
    ]
   },
   {
@@ -20,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +61,16 @@
     "warnings.filterwarnings('ignore')\n",
     "%matplotlib inline\n",
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
-    "sns.set_palette('Set2')\n",
+    "# 📊 Plot aesthetics\n",
+    "sns.set_palette(\"colorblind\")          # Color‑blind safe palette\n",
+    "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "plt.rcParams['figure.figsize'] = (12, 6)\n",
-    "pd.set_option('display.max_columns', None)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -712,12 +720,20 @@
     "print(f\"Number of Samples: {df.shape[0]}\")\n",
     "\n",
     "print(\"\\nPreview of the dataset:\")\n",
-    "display(df.head())\n"
+    "display(df.head())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Data source**: De Cock, D. (2011). *Ames Housing Dataset* [Kaggle].  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -747,10 +763,14 @@
     "print(f\"Data types:\\n{df.dtypes.value_counts()}\")\n",
     "print(f\"\\nMissing values summary:\\n{df.isnull().sum().sum()} total missing values\")\n",
     "\n",
+    "\n",
+    "\n",
     "numeric_features = df.select_dtypes(include=['int64', 'float64']).columns\n",
     "categorical_features = df.select_dtypes(include=['object']).columns\n",
     "print(f\"\\nNumeric features: {len(numeric_features)}\")\n",
-    "print(f\"Categorical features: {len(categorical_features)}\")\n"
+    "print(f\"Categorical features: {len(categorical_features)}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
